[gd_scene load_steps=13 format=3 uid="uid://b5et68oflur8b"]

[ext_resource type="Script" path="res://scripts/pipe.gd" id="1_5l1rp"]
[ext_resource type="Texture2D" uid="uid://b4ltajnfyfvsk" path="res://assests/pipe/pipe_down.png" id="2_ktlct"]
[ext_resource type="AudioStream" uid="uid://btcn3psc43rnb" path="res://assests/sfx/eat.wav" id="2_wd3py"]
[ext_resource type="Texture2D" uid="uid://k24bqadfgryv" path="res://assests/pipe/pipe_closed.png" id="3_sqjma"]
[ext_resource type="Texture2D" uid="uid://bh45tcuc46b7e" path="res://assests/pipe/pipe_left.png" id="4_yhxkh"]
[ext_resource type="Texture2D" uid="uid://df3ikjhfo4se4" path="res://assests/pipe/pipe_right.png" id="5_x6owm"]
[ext_resource type="Texture2D" uid="uid://bpi8dcjfdqxv" path="res://assests/pipe/pipe_up.png" id="6_6elfa"]
[ext_resource type="Texture2D" uid="uid://cle7wps5qghya" path="res://assests/spritesheet_pipe_body.png" id="7_h678h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_04mht"]
radius = 7.0

[sub_resource type="SpriteFrames" id="SpriteFrames_i0kwu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ktlct")
}, {
"duration": 1.0,
"texture": ExtResource("3_sqjma")
}],
"loop": true,
"name": &"down",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_yhxkh")
}, {
"duration": 1.0,
"texture": ExtResource("3_sqjma")
}],
"loop": true,
"name": &"left",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_x6owm")
}, {
"duration": 1.0,
"texture": ExtResource("3_sqjma")
}],
"loop": true,
"name": &"right",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_sqjma")
}],
"loop": true,
"name": &"stop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_6elfa")
}, {
"duration": 1.0,
"texture": ExtResource("3_sqjma")
}],
"loop": true,
"name": &"up",
"speed": 9.0
}]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_efphh"]
texture = ExtResource("7_h678h")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0

[sub_resource type="TileSet" id="TileSet_m4hxa"]
sources/0 = SubResource("TileSetAtlasSource_efphh")

[node name="PipeHead" type="CharacterBody2D"]
collision_mask = 26
motion_mode = 1
script = ExtResource("1_5l1rp")

[node name="sfx" type="Node" parent="."]

[node name="Eat" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource("2_wd3py")

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("CircleShape2D_04mht")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_i0kwu")
animation = &"stop"
centered = false

[node name="cur_dir_ray" type="RayCast2D" parent="."]
position = Vector2(8, 7)
collision_mask = 26

[node name="nxt_dir_ray" type="RayCast2D" parent="."]
position = Vector2(8, 7)
collision_mask = 26

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 8.528

[node name="PipeBody_TileMap" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_m4hxa")
